[metadata]
description-file = README.rst

[bdist_wheel]
universal=1

[egg_info]
tag_build = 
tag_date = false

[aliases]
release = egg_info -RDb ''

[versioneer]
VCS = git
style = pep440
versionfile_source = src/punx/_version.py
versionfile_build = punx/_version.py
tag_prefix =
parentdir_prefix = punx-
